# file-upload-service

./: Cargo.toml
migrations/: 01_jobs_table.sql
src/: lib.rs  main.rs
src/job_upload_service/: api.rs
src/retry_worker_service/: service.rs
src/server/: api.rs  db.rs  mod.rs  s3.rs  value.rs
