[package]
name = "file-upload-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
serde = { version = "1", features = ["derive"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17"
dotenvy = "0.15"
uuid = "1.23.0"
